--- a/other/Aria2/aria2.conf
+++ b/other/Aria2/aria2.conf
@@ -97,6 +97,8 @@ peer-id-prefix=-TR2770-
 user-agent=Transmission/2.77
 # 当种子的分享率达到这个数时, 自动停止做种, 0为一直做种, 默认:1.0
 seed-ratio=0.5
+#作种时间大于720（12小时）分钟，则停止作种，可以与上方分享率参数配套，满足其一就终止做种
+seed-time=720
 # 强制保存会话, 即使任务已经完成, 默认:false
 # 较新的版本开启后会在任务完成后依然保留.aria2文件
 force-save=true
@@ -106,3 +108,9 @@ force-save=true
 bt-seed-unverified=true
 # 保存磁力链接元数据为种子文件(.torrent文件), 默认:false
 #bt-save-metadata=true
+
+
+
+#部分事件hook
+#下载完成后执行相应脚本
+#on-download-complete=/home/pi/aria2/rasp.sh
